tests/failures/invalid_version.stderr
error: proc macro panicked
 --> tests/failures/invalid_version.rs:4:5
  |
4 |     todo_b4!("2024/01/01");
  |     ^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: called `Result::unwrap()` on an `Err` value: Error("expected comma after major version number, found '/'")
