tests/failures/invalid_version.rs
use todo_by::todo_b4;

fn main() {
    todo_b4!("2024/01/01");
}
